force-app/main/default/objects/Booked_Trade__c/Booked_Trade__c.object-meta.xml
<CustomObject>
    <label>Booked Trade</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Booked Trades Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>