force-app/main/default/objects/Booked_Trade__c/fields/Buy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buy_Amount__c</fullName>
    <description>Buy Amount</description>
    <label>Buy Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>