force-app/main/default/objects/Booked_Trade__c/fields/Buy_Currency__c.field-meta.xml
<CustomField>
    <fullName>Buy_Currency__c</fullName>
    <description>Buy Currency</description>
    <label>Buy Currency</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>