force-app/main/default/objects/Booked_Trade__c/fields/Rate_Booked__c.field-meta.xml
<CustomField>
    <fullName>Rate_Booked__c</fullName>
    <description>Rate Booked</description>
    <label>Rate Booked</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>