force-app/main/default/objects/Booked_Trade__c/fields/Sell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sell_Amount__c</fullName>
    <description>Sell Amount</description>
    <label>Sell Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>