force-app/main/default/objects/Booked_Trade__c/fields/Sell_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sell_Currency__c</fullName>
    <description>Sell Currency Type</description>
    <label>Sell Currency</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>