force-app/main/default/objects/Booked_Trade__c/fields/Trade_Id__c.field-meta.xml
<CustomField>
    <fullName>Trade_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Booked Trade Id</description>
    <externalId>true</externalId>
    <label>Trade Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>