force-app/main/default/objects/Booked_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sell_Currency__c</columns>
    <columns>Sell_Amount__c</columns>
    <columns>Buy_Currency__c</columns>
    <columns>Buy_Amount__c</columns>
    <columns>Rate_Booked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>